Fixed spacing of title

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -59,29 +59,22 @@ h3 {
 }
 
 #top {
+	padding: 50px 24px;
 	background: $bullfrog_green url(../images/bullfrog-header.png) no-repeat right center;
-	height: 175px;
 	margin-bottom: 50px;
-	a {
-		margin-top: 150px;
-		padding-left: 20px;
+	.logo {
+		a {
+			font-size: 72px;
+			color: white;
+			text-decoration: none;
+		}
 	}
 
 }
 
-
-.logo {
-	a {
-		font-family: Georgia;
-		font-size: 72px;
-		color: white;
-		text-decoration: none;
-	}
-}
 
 .article-title {
 	font-size: 36px;
-	font-family: Georgia;
 	color: $bullfrog_green;
 	margin-bottom: 10px;
 }
@@ -123,4 +116,6 @@ footer {
 
 footer p {
 	color: white;
+	padding: 20px;
+	font-family: Arial;
 }
